--- a/photoshop.html
+++ b/photoshop.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4v" style="background-image: url(assets/images/mbr-7-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4v" style="background-image: url(assets/images/mbr-7-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -79,7 +79,7 @@
 
 </section>
 
-<section class="mbr-footer footer4 mbr-section mbr-section-md-padding" id="contacts4-4m" style="background-color: rgb(0, 0, 0); padding-top: 60px; padding-bottom: 30px;">
+<section class="mbr-footer footer4 mbr-section mbr-section-md-padding" id="contacts4-4m" style="background-color: rgb(0, 0, 0); padding-top: 30px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="mbr-contacts row">
@@ -91,7 +91,7 @@
 Email:slugones@miamiartsstudio.com<br>
 Phone: (786)-397-1094<br><br></p>
                     </div>
-                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a href="intro.html">Susana Lugones</a></li><li><a href="photoshopgallery.html">Photoshop Gallery</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-mac.zip">Download for Mac</a></li></ul></div>
+                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a href="intro.html" class="text-white">Susana Lugones</a></li><li><a href="photoshopgallery.html" class="text-white">Photoshop Gallery</a></li><li><a href="index.html" class="text-white">Landing Page</a></li></ul></div>
                 </div>
             </div>
             <div class="col-sm-4" data-form-type="formoid">
@@ -99,7 +99,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="2xwAnwXfBo/wxjmrgY15qWezAuyx9/eBV2lmnrz33fAe0grPoxb5OZhcVdvz6MY0AK1XXKcmXDFJyVAgbs6pzyw4v8BTFjyiXeIPRQCIaFJm4X+2S6cL1WiJWSUIwbNF" data-form-email="true">
+                    <input type="hidden" value="Msh3Z7FvcT+faLX+FcJ2r/Y0zmL6BCud3aO7NHodiu+zhVFSy0au6yvuypDNyyoJjeoZrmELtGwEGN8o9bgL3BRx99a1M98iFQtj6+VX5e1UrtMQJUXTzbdKETtjwXUh" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
