--- a/word.html
+++ b/word.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4x" style="background-image: url(assets/images/mbr-9-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4x" style="background-image: url(assets/images/mbr-9-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0);"></div>
 
@@ -79,7 +79,7 @@
 
 </section>
 
-<section class="mbr-footer footer4 mbr-section mbr-section-md-padding" id="contacts4-4m" style="background-color: rgb(0, 0, 0); padding-top: 60px; padding-bottom: 30px;">
+<section class="mbr-footer footer4 mbr-section mbr-section-md-padding" id="contacts4-4m" style="background-color: rgb(0, 0, 0); padding-top: 30px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="mbr-contacts row">
@@ -91,7 +91,7 @@
 Email:slugones@miamiartsstudio.com<br>
 Phone: (786)-397-1094<br><br></p>
                     </div>
-                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a href="intro.html">Susana Lugones</a></li><li><a href="photoshopgallery.html">Photoshop Gallery</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-mac.zip">Download for Mac</a></li></ul></div>
+                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a href="intro.html" class="text-white">Susana Lugones</a></li><li><a href="photoshopgallery.html" class="text-white">Photoshop Gallery</a></li><li><a href="index.html" class="text-white">Landing Page</a></li></ul></div>
                 </div>
             </div>
             <div class="col-sm-4" data-form-type="formoid">
@@ -99,7 +99,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="geIblg4uQ2/q5ug7/5nptwIFHg9Jpx1P3/meYIAj84z17GgqKhZ4D0hAZG7EGg1Ww5ieacaK9npCkJPbJXOulEAeJZVEDDtajxczxbwiwyyuNjcGmtiGlcrDG6ohQo4v" data-form-email="true">
+                    <input type="hidden" value="27j7CtlS4OM8H+0iIP2hIB77VZY9PBwiXHjDd34Q4qeRm/L6votgX/DivYHdUm7tsQcW14APZa+ISygcWAGx+5z4RPye7q9DZmt586gYbGiHrpIrcwuob0Gzw8WhlUAb" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
