--- a/photoshopgallery.html
+++ b/photoshopgallery.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-3m" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 3rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-3m" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 3rem;">
     <!-- Filter -->
     
 
@@ -197,7 +197,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="OiIZwEduFMTo1YJ6eCxAqYqh/Pd/0GFfXS+p3+nlBRwHOuh/LMcgKwMd+1iYYWkMkmAacuJ9bRE/6HAp5JN2FVUtwq0KV4pVxh+teNsu5upTZsYNz3etYkDN6ypGtLD1" data-form-email="true">
+                    <input type="hidden" value="JmS1azHCzdw5nXBIL23WtSjWFk++lWpF6OSQPnpvTXTgk+eSsurL8TfthTCsEjbwXpZmJG51KYUi0qkRaHxu30/ycs8Oqq+jZXyUNccGHR1mD1VaafsOgLECbj3GV1iZ" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
